--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "release-changelog-action",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "description": "Release unreleased changes in your Keep a Changelog",
   "main": "lib/main.js",
   "scripts": {
