chore: update package.json keywords

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "keywords": [
     "actions",
     "node",
-    "setup"
+    "changelog",
+    "release"
   ],
   "author": "",
   "license": "MIT",
