--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,9 @@ inputs:
   operation:
     description: 'release | read'
     required: true
+  format:
+    description: 'Markdown format: compact (default) | markdownlint'
+    required: false
 outputs:
   changelog:
     description: 'Read or released changelog'
